--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 </style>
 	<div>
 	 <center>
-        <img src="ProPicture.png">
+        <img src="ProPicture.jpg">
 	 </center>	
     </div> 
  </head>  
