--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title> CPS 105 Virtual Business Card </title>
+  <title> CPS 105 Virtual Business Card. </title>
   <style>
 body {
     background: black;
