--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 </style>
 	<div>
 	 <center>
-          <img src="163621pro.png">
+          <img src="">
 	 </center>	
     </div> 
  </head>  
@@ -33,23 +33,12 @@ body {
 		
 		<h4> College </h4>
 		<p>
-			Currently I am studying Computer Science at <a href="http://www.bju.edu/"> Bob Jones University </a>(BJU).
-			I work as an IT Assets Technician in IT Reveal. I work in the provisioning department, we re-image the computers that have unsolveable issues. 
-			I also sing in the University Singers Choir as a Bass II.
+			Senior Computer Science Major at <a href="bju.edu">Bob Jones University</a>
 		</P>
 		
 		<h4> Bio </h4>
 		<p> 
-			I've lived in Georgia for my entire life. I have two sisters at home, Jennifer and Anna Grace, 
-			they are in 11th and 9th grade. Both my parents, Andrew and Daphne Efting graduated from BJU. 
-			My home church is <a href="http://lebanonbaptist.org">Lebanon Baptist Church</a>, which is pastored by Dr. Brian Peterson.
-		</p>
-			
-		<p>
-			I like working with computers. I have experience building computers, debugging computer issues, and playing computer games.
-			I also enjoy rock climbing, despite currently lacking the ability to be very good.
-			
-		
+			I enjoy working with computers and music. 
 		</p>
    </div>
   </body>
