--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ body {
   <body>	   
    <div id="content"> 
 		<h1><center> James (J.D.) Efting </center></h1>
-		<h3><center> Freshman, Class of 2021 </center></h3>
+		<h3><center> Senior, Class of 2021 </center></h3>
 		
 		<h4> College </h4>
 		<p>
-			Senior Computer Science Major at <a href="bju.edu">Bob Jones University</a>
+			Computer Science Major at <a href="bju.edu">Bob Jones University</a>
 		</P>
 		
 		<h4> Bio </h4>
