--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 </style>
 	<div>
 	 <center>
-          <img src="">
+          <img src="ProfPic.jfif">
 	 </center>	
     </div> 
  </head>  
