--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ body {
 </style>
 	<div>
 	 <center>
-          <img src="ProfPic.jfif">
+          <img src="profPic1.jpg">
 	 </center>	
     </div> 
  </head>  
   <body>	   
    <div id="content"> 
-		<h1><center> James (J.D.) Efting </center></h1>
+		<h1><center> James (JD) Efting </center></h1>
 		<h3><center> Senior, Class of 2021 </center></h3>
 		
 		<h4> College </h4>
