--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 </style>
 	<div>
 	 <center>
-          <img src="profPic1.jpg">
+          <img src="profPic1.jpg" style="width:100px;height:100px;">
 	 </center>	
     </div> 
  </head>  
