--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title> CPS 105 Virtual Business Card </title>
+  <title> Virtual Business Card </title>
   <style>
 body {
     background: black;
@@ -18,11 +18,16 @@ body {
     line-height: 150%;
 }
 
+.profile {
+  max-width: 400px;
+  max-height: 400px;
+}
+
 
 </style>
 	<div>
 	 <center>
-          <img src="profPic1.jpg" style="width:100px;height:100px;">
+          <img src="profPic1.jpg" class="profile">
 	 </center>	
     </div> 
  </head>  
@@ -33,7 +38,7 @@ body {
 		
 		<h4> College </h4>
 		<p>
-			Computer Science Major at <a href="bju.edu">Bob Jones University</a>
+			Computer Science Major at <a href="http://bju.edu" target="_blank">Bob Jones University</a>
 		</P>
 		
 		<h4> Bio </h4>
