--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 		
 		<h4> Bio </h4>
 		<p> 
-			I enjoy working with computers and music. 
+			I enjoy working with computers and making music. 
 		</p>
    </div>
   </body>
